Updated Plotting code

--- a/presentation/control-plots-slides.tex
+++ b/presentation/control-plots-slides.tex
@@ -95,3 +95,552 @@
 %\vfill
 %\centering
 %{\Large \textbf{Thank you for your attention.\\ Any questions?}}\begin{frame}{\insertsubsection}\begin{frame}{\insertsubsection}\begin{frame}{\insertsubsection}\begin{frame}{\insertsubsection}\begin{frame}{\insertsubsection}\begin{frame}{\insertsubsection}\begin{frame}{\insertsubsection}\begin{frame}{\insertsubsection}
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_barrel_iso9_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_barrel_iso9_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_barrel_iso6_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_barrel_iso6_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_endcap_iso6_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_endcap_iso6_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_endcap_iso9_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_endcap_iso9_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_endcap_iso5_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_endcap_iso5_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_barrel_iso5_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_barrel_iso5_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_endcap_iso10_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_endcap_iso10_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_barrel_iso12_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_barrel_iso12_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_barrel_iso13_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_barrel_iso13_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_endcap_iso6_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_endcap_iso6_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_endcap_iso9_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_endcap_iso9_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_barrel_iso9_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_barrel_iso9_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_barrel_iso10_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_barrel_iso10_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_barrel_iso6_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_barrel_iso6_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_endcap_iso13_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_endcap_iso13_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_endcap_iso12_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_endcap_iso12_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_endcap_iso12_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_endcap_iso12_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_barrel_iso11_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_barrel_iso11_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_barrel_iso10_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_barrel_iso10_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_barrel_iso5_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_barrel_iso5_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_endcap_iso5_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_endcap_iso5_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_endcap_iso9_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_endcap_iso9_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_endcap_iso6_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_endcap_iso6_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_barrel_iso6_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_barrel_iso6_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_barrel_iso9_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_barrel_iso9_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_barrel_iso12_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_barrel_iso12_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_endcap_iso5_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_endcap_iso5_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_barrel_iso5_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_barrel_iso5_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_endcap_iso10_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_endcap_iso10_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_endcap_iso11_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_endcap_iso11_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_barrel_iso7_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_barrel_iso7_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_barrel_iso11_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_barrel_iso11_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_barrel_iso8_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_barrel_iso8_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_endcap_iso8_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_endcap_iso8_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_endcap_iso7_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_endcap_iso7_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_endcap_iso13_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_endcap_iso13_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_endcap_iso12_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_endcap_iso12_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_endcap_iso8_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_endcap_iso8_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_endcap_iso7_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_endcap_iso7_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_barrel_iso7_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_barrel_iso7_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_barrel_iso8_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_barrel_iso8_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_barrel_iso4_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_barrel_iso4_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_endcap_iso4_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_endcap_iso4_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_endcap_iso11_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_endcap_iso11_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_barrel_iso12_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_barrel_iso12_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_barrel_iso13_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_barrel_iso13_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_barrel_iso4_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_barrel_iso4_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_endcap_iso4_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_endcap_iso4_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_barrel_iso13_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_barrel_iso13_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_endcap_iso10_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_endcap_iso10_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_endcap_iso11_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_endcap_iso11_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_neg_endcap_iso13_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_met_uncorrected_pos_endcap_iso13_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_barrel_iso11_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_barrel_iso11_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_barrel_iso10_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_barrel_iso10_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_endcap_iso4_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_endcap_iso4_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_neg_barrel_iso4_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_ptOverMt_pos_barrel_iso4_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_barrel_iso8_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_barrel_iso8_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_barrel_iso7_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_barrel_iso7_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_endcap_iso7_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_endcap_iso7_None.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}{\insertsubsection}
+   \begin{columns}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_pos_endcap_iso8_None.png}
+   \column{.5\textwidth}
+   \includegraphics[width=0.9\linewidth]{plots/earlyRun3emet/Run2018_plots_fully_classic/emet/Run2018_emet_mt_uncorrected_neg_endcap_iso8_None.png}
+\end{columns}
+\end{frame}
+
+\appendix
+\beginbackup
+\begin{frame}
+\centering
+\vspace{1cm}
+\LARGE{\textbf{Backup}}
+\end{frame}
+
+\backupend\end{document}
